--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <button class="login-btn">
                         Login
                     </button>
-                    
+
                 </a>
                 <a href="/html code/signin.html">
                     <button class="signin">
@@ -52,19 +52,21 @@
 
         <img class="header-image" src="/assets/images/header.png" alt="head">
 
-        <div class="slogan">Happiness is.. <br>when everybody cherishes your cooking.
+        <div class="slogan">Happiness is.. when everybody cherishes your cooking.
         </div>
     </div>
 
     <div class="recipe">
-        <a href="/html code/page4.html">
-            <img class="recipe1" src="/assets/images/chickenfry.jpg" height="300px" width="600px" alt="chicken">
-        </a>
+        <div>
+            <a href="/html code/page4.html">
+                <img class="recipe1" src="/assets/images/chickenfry.jpg" height="300px" width="600px" alt="chicken">
+            </a>
+        </div>
         <div class="about">
             <h2>CHICKEN FRY</h2>
-            <p>Chicken 65 is a spicy, deep-fried chicken<br> dish originating from Hotel Buhari, Chennai, India, as
-                <br>an entrée, or quick snack. The flavour of the<br> dish can be to red chillies, but the exact
-                set<br> of ingredients for the recipe can vary.....
+            <p>Chicken 65 is a spicy, deep-fried chicken dish originating from Hotel Buhari, Chennai, India, as
+                an entrée, or quick snack. The flavour of the dish can be to red chillies, but the exact
+                set of ingredients for the recipe can vary.....
             </p>
         </div>
     </div>
@@ -72,62 +74,74 @@
 
 
     <div class="recipe">
-        <a href="/html code/page6.html">
-            <img class="recipe1" src="/assets/images/mutton.jpeg" height="300px" width="600px" alt="mutton">
-        </a>
+        <div>
+            <a href="/html code/page6.html">
+                <img class="recipe1" src="/assets/images/mutton.jpeg" height="300px" width="600px" alt="mutton">
+            </a>
+        </div>
         <div class="about">
             <h2>MUITTON CHUKKA</h2>
-            <p>Mutton is not very regular in our menu but whenever<br> we get it, its mostly biriyani or Mutton Sukka
-                as<br> its our family favourite. I wanted to share ammas<br> chettinad version of mutton chukka and here
-                it<br> is for you all.Its called mutton chukka.....</p>
+            <p>Mutton is not very regular in our menu but whenever we get it, its mostly biriyani or Mutton Sukka
+                a its our family favourite. I wanted to share ammas chettinad version of mutton chukka and here
+                it is for you all.Its called mutton chukka.....</p>
         </div>
     </div>
     <div class="recipe">
-        <a href="/html code/page7.html">
-            <img class="recipe1" src="/assets/images/diamond.jpg" width="600px" height="300px" alt="masala diamond">
-        </a>
+        <div>
+            <a href="/html code/page7.html">
+                <img class="recipe1" src="/assets/images/diamond.jpg" width="600px" height="300px" alt="masala diamond">
+            </a>
+        </div>
         <div class="about">
             <h2>MASALA DIAMOND</h2>
-            <p>I would say that this recipe will be a easy<br> but tasty snack which you can make for diwali..I<br> made
-                it in minutes and it tasted divine....So<br> crispy and so yummy..I hope you will <br>try this out and
+            <p>I would say that this recipe will be a easy but tasty snack which you can make for diwali..I made
+                it in minutes and it tasted divine....So crispy and so yummy..I hope you will try this out and
                 let me know how it turned out for you.</p>
         </div>
     </div>
     <div class="recipe">
-        <a href="/html code/page8.html">
-            <img class="recipe1" src="/assets/images/fish.JPG" height="300px" width="600px" alt="fish">
-        </a>
+        <div>
+            <a href="/html code/page8.html">
+                <img class="recipe1" src="/assets/images/fish.JPG" height="300px" width="600px" alt="fish">
+            </a>
+        </div>
         <div class="about">
             <h2>FISH FRY</h2>
             <p>
-                A fish fry is a meal containing battered or<br> breaded fried fish. It usually also includes french
-                <br>fries, coleslaw, macaroni salad, lemon slices, tartar<br> sauce, hot sauce,malt vinegar and dessert.
-                by coating<br> fish with semolina and egg yolk....
+                A fish fry is a meal containing battered orbreaded fried fish. It usually also includes french
+                fries, coleslaw, macaroni salad, lemon slices, tartar sauce, hot sauce,malt vinegar and dessert.
+                by coating fish with semolina and egg yolk....
             </p>
         </div>
     </div>
     <div class="recipe">
-        <a href="/html code/page9.html">
-            <img class="recipe1" src="/assets/images/masalapuri.jpg" height="300px" width="600px" alt="masala puri">
-        </a>
+        <div>
+            <a href="/html code/page9.html">
+                <img class="recipe1" src="/assets/images/masalapuri.jpg" height="300px" width="600px" alt="masala puri">
+            </a>
+        </div>
         <div class="about">
             <h2>MASALA PURI</h2>
-            <p>Masala puri is an awesome street food snack made with<br> layers of crunchy puri, creamy and spicy white
-                peas<br> gravy, rich spices and fresh veggies. Our easy <br>Bangalore masala puri is great to make
-                whenever you<br> a craving a fun and flavorful chaat!</p>
+            <p>Masala puri is an awesome street food snack made with layers of crunchy puri, creamy and spicy white
+                peas gravy, rich spices and fresh veggies. Our easy Bangalore masala puri is great to make
+                whenever you a craving a fun and flavorful chaat!</p>
         </div>
     </div>
+
     <div class="recipe">
-        <a href="/html code/page10.html">
-            <img class="recipe1" src="/assets/images/ravadosa.jpg" height="300px" width="600px" alt="rava dosa">
-            <div class="about">
-        </a>
-        <h2>RAVA DOSA</h2>
-        <p>Today's recipe, Rawa Dosa, is one such <br>favorite for all, which I have been urging to<br> post for a
-            while now. Anyone who had eaten at a <br>restaurant serving South Indian cuisine would definitely
-            <br>had order this crispy dosa atleast once.
-        </p>
-    </div>
+        <div>
+            <a href="/html code/page10.html">
+                <img class="recipe1" src="/assets/images/ravadosa.jpg" height="300px" width="600px" alt="rava dosa">
+
+            </a>
+        </div>
+        <div class="about">
+            <h2>RAVA DOSA</h2>
+            <p>Today's recipe, Rawa Dosa, is one such favorite for all, which I have been urging t post for a
+                while now. Anyone who had eaten at a restaurant serving South Indian cuisine would definitely
+                had order this crispy dosa atleast once.
+            </p>
+        </div>
     </div>
     </div>
 
