--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
  </div>
-    <div class="all-recipe">
+    <!-- <div class="all-recipe">
      <div class="recipe">
             <div class="chicken">
                 <a href="./pages/page4.html">
@@ -74,9 +74,9 @@
                     set of ingredients for the recipe can vary.....
                 </p>
             </div>
-        </div> 
-
-     <!-- <script>
+        </div>  -->
+ 
+      <script>
 
  let recipe = [
 
@@ -176,9 +176,9 @@ for (let i = 0; i < recipe.length; i++) {
 
 
 
-    </script> -->
+    </script>
 
-     <div class="recipe">
+     <!-- <div class="recipe">
             <div>
                 <a href="./pages/page5.html">
                     <img class="recipe1" src="./assets/images/mutton.jpeg" height="300px" width="600px" alt="mutton">
@@ -250,7 +250,7 @@ for (let i = 0; i < recipe.length; i++) {
                 </p>
             </div>
         </div>
-     </div> -->
+     </div> --> -->
 
     <footer class="footer">
         <div class="container">
