--- a/index.html
+++ b/index.html
@@ -56,19 +56,11 @@
     <div>
 
         <img class="header-image" src="https://media.tenor.com/yZCowKJy4UoAAAAd/anime-anime-gif.gif" alt="head">
-<<<<<<< HEAD
 
 
  </div>
     <!-- <div class="all-recipe">
      <div class="recipe">
-=======
-
-
-    </div>
-    <!-- <div class="all-recipe"> -->
-    <!-- <div class="recipe">
->>>>>>> 407e8dd3be1cd11532e7ae571143000e2bab683b
             <div class="chicken">
                 <a href="./pages/page4.html">
                     <img class="recipe1" src="./assets/images/chickenfry.jpg" height="300px" width="600px"
@@ -82,30 +74,16 @@
                     set of ingredients for the recipe can vary.....
                 </p>
             </div>
-<<<<<<< HEAD
         </div>  -->
  
       <script>
 
  let recipe = [
-=======
-        </div> -->
-
-    <script>
-
-let recipe = [
->>>>>>> 407e8dd3be1cd11532e7ae571143000e2bab683b
 
 
 
 
-<<<<<<< HEAD
  {    img_recipe1 : "./assets/images/chickenfry.jpg",
-=======
-
-{
-    img_recipe1 : "./assets/images/chickenfry.jpg",
->>>>>>> 407e8dd3be1cd11532e7ae571143000e2bab683b
     h2_cardtitle: "CHICKEN",
     p_para: "Chicken 65 is a spicy, deep-fried chicken dish originating from Hotel Buhari, Chennai, India, as an entrée, or quick snack. The flavour of the dish can be to red chillies, but the exact set of ingredients for the recipe can var",
 },
@@ -156,11 +134,7 @@ for (let i = 0; i < recipe.length; i++) {
         let p_para;
 
         div_all = document.createElement("div");
-<<<<<<< HEAD
         div_all.setAttribute("class", "all-recipe");
-=======
-        div_all.setAttribute("class", "all_recipe");
->>>>>>> 407e8dd3be1cd11532e7ae571143000e2bab683b
 
         div_recipe = document.createElement("div");
         div_recipe.setAttribute("class", "recipe");
@@ -204,11 +178,8 @@ for (let i = 0; i < recipe.length; i++) {
 
     </script>
 
-<<<<<<< HEAD
      <!-- <div class="recipe">
-=======
     <!-- <div class="recipe">
->>>>>>> 407e8dd3be1cd11532e7ae571143000e2bab683b
             <div>
                 <a href="./pages/page5.html">
                     <img class="recipe1" src="./assets/images/mutton.jpeg" height="300px" width="600px" alt="mutton">
@@ -280,11 +251,7 @@ for (let i = 0; i < recipe.length; i++) {
                 </p>
             </div>
         </div>
-<<<<<<< HEAD
-     </div> --> -->
-=======
      </div> -->
->>>>>>> 407e8dd3be1cd11532e7ae571143000e2bab683b
 
     <footer class="footer">
         <div class="container">
@@ -321,9 +288,6 @@ for (let i = 0; i < recipe.length; i++) {
             </div>
         </div>
     </footer>
-<<<<<<< HEAD
-    
-=======
     <!-- <script>
     let div_col;
     let div_card;
@@ -375,7 +339,7 @@ for (let i = 0; i < recipe.length; i++) {
 
 </script> -->
 
->>>>>>> 407e8dd3be1cd11532e7ae571143000e2bab683b
 </body>
 
+</html>
 </html>
