--- a/pages/addrecipe.html
+++ b/pages/addrecipe.html
@@ -8,10 +8,8 @@
     <form id="addrecipe">
       <label for="name">Image Url</label>
       <input type="url" required="" id="imgurl">
-      <!-- <label for="about">about</label>
-      <input type="text" id="email" name="email" required=""> -->
-      <label for="message">Message:</label>
-      <textarea id="message" name="message" required=""></textarea>
+      
+      <textarea id="message" name="message" required="">about</textarea>
       <button type="submit">Submit</button>
     </form>
   </div>
