--- a/pages/recipecard.html
+++ b/pages/recipecard.html
@@ -8,53 +8,53 @@
     <title>Document</title>
 </head>
 <body>
-     <!-- <a href="../assets/images/mutton.jpeg"></a> -->
+     
 
 <script>
 
-    let recipe = [
+//     let recipe = [
    
    
    
    
-    {    img_recipe1 : "../assets/images/chickenfry.jpg",
-       h2_cardtitle: "CHICKEN",
-       p_para: "Chicken 65 is a spicy, deep-fried chicken dish originating from Hotel Buhari, Chennai, India, as an entrée, or quick snack. The flavour of the dish can be to red chillies, but the exact set of ingredients for the recipe can var",
-   },
+//     {    img_recipe1 : "../assets/images/chickenfry.jpg",
+//        h2_cardtitle: "CHICKEN",
+//        p_para: "Chicken 65 is a spicy, deep-fried chicken dish originating from Hotel Buhari, Chennai, India, as an entrée, or quick snack. The flavour of the dish can be to red chillies, but the exact set of ingredients for the recipe can var",
+//    },
    
-   {
-       img_recipe1: "../assets/images/like.png",
-       h2_cardtitle: "MUTTON",
-       p_para: "Mutton is not very regular in our menu but whenever we get it, its mostly biriyani or Mutton Sukk as its our family favourite. I wanted to share ammas chettinad version of mutton chukka and hereit is for you all..",
-   },
+//    {
+//        img_recipe1: "../assets/images/mutton.jpeg",
+//        h2_cardtitle: "MUTTON",
+//        p_para: "Mutton is not very regular in our menu but whenever we get it, its mostly biriyani or Mutton Sukk as its our family favourite. I wanted to share ammas chettinad version of mutton chukka and hereit is for you all..",
+//    },
    
-   {
-       img_recipe1: "../assets/images/diamond.jpg",
-       h2_cardtitle: "DIAMOND FRY",
-       p_para: "I would say that this recipe will be a easy but tasty snack which you can make for diwali..I madeit in minutes and it tasted divine....So crispy and so yummy..I hope you will try this out andlet me know how it turned out for you."
+//    {
+//        img_recipe1: "../assets/images/diamond.jpg",
+//        h2_cardtitle: "DIAMOND FRY",
+//        p_para: "I would say that this recipe will be a easy but tasty snack which you can make for diwali..I madeit in minutes and it tasted divine....So crispy and so yummy..I hope you will try this out andlet me know how it turned out for you."
    
-   },
-   {
-       img_recipe1: "../assets/images/fish.JPG",
-       h2_cardtitle: "FISH",
-       p_para: "A fish fry is a meal containing battered or breaded fried fish. It usually also includes french fries, coleslaw, macaroni salad, , hot sauce,malt vinegar and dessert. by coating fish with semolina and egg yolk...."
+//    },
+//    {
+//        img_recipe1: "../assets/images/fish.JPG",
+//        h2_cardtitle: "FISH",
+//        p_para: "A fish fry is a meal containing battered or breaded fried fish. It usually also includes french fries, coleslaw, macaroni salad, , hot sauce,malt vinegar and dessert. by coating fish with semolina and egg yolk...."
    
-   },
-   {
-       img_recipe1: "../assets/images/masalapuri.jpg",
-       h2_cardtitle: "MASALA PURI",
-       p_para: "Masala puri is an awesome street food snack made with layers of crunchy puri, creamy and spicy white peas gravy, rich spices and fresh veggies. Our easywhenever you a craving a fun and flavorful chaat!"
-   },
-   
-   
-   {
-       img_recipe1: "../assets/images/ravadosa.jpg",
-       h2_cardtitle: "RAVA DOSA",
-       p_para: "Today's recipe, Rawa Dosa, is one such favorite for all, which I have been urging to post for a  while now. Anyone who had eaten at a restaurant serving South Indian cuisine would definitel had order this crispy dosa atleast once."
-   },
+//    },
+//    {
+//        img_recipe1: "../assets/images/masalapuri.jpg",
+//        h2_cardtitle: "MASALA PURI",
+//        p_para: "Masala puri is an awesome street food snack made with layers of crunchy puri, creamy and spicy white peas gravy, rich spices and fresh veggies. Our easywhenever you a craving a fun and flavorful chaat!"
+//    },
    
    
-   ]
+//    {
+//        img_recipe1: "../assets/images/ravadosa.jpg",
+//        h2_cardtitle: "RAVA DOSA",
+//        p_para: "Today's recipe, Rawa Dosa, is one such favorite for all, which I have been urging to post for a  while now. Anyone who had eaten at a restaurant serving South Indian cuisine would definitel had order this crispy dosa atleast once."
+//    },
+   
+   
+//    ]
    
    
    for (let i = 0; i < recipe.length; i++) {
