--- a/pages/addrecipe.html
+++ b/pages/addrecipe.html
@@ -17,7 +17,7 @@
         <input type="text"> -->
         <textarea id="message" name="message" required="" type="textarea">about</textarea>
         <button type="submit">Submit</button>
-        <button type="submit">Edit</button>
+        <button type="submit" id="edit_card">Edit</button>
       </form>
     </div>
     <script>
@@ -33,11 +33,13 @@
         let Image = document.getElementById("imgurl").value
         let para = document.getElementById("h2_cardtitle").value
         let about = document.getElementById("message").value
+        let recipe_id = Date.now();
 
         let newrecipe = {
           "image_url": Image,
           "h2_cardtitle": para,
-          "message": about
+          "message": about,
+          "recipe_id":recipe_id,
         }
         array.push(newrecipe);
         let imgabout = JSON.stringify(array);
@@ -45,23 +47,30 @@
         window.location.href = "../index.html";
       })
 
-      // edit product
-      function editProduct(productID) {
-    let array = JSON.parse(localStorage.getItem("newRecipe"));
-    let product = array.find(item => item.id === productID);
-    document.getElementById("imgurl").value = product.image_url;
-    document.getElementById("h2_cardtitle").value = product.h2_cardtitle;
-    document.getElementById("message").value = product.message;
-    // addButton.style.display = "none";
-    // editButton.style.display = "inline-block";
-    editButton.addEventListener("click", function() {
-      product.image_url = document.getElementById("imgurl").value;
-      product.h2_cardtitle = document.getElementById("h2_cardtitle").value;
-      product.message = document.getElementById("message").value;
-      localStorage.setItem("newRecipe", JSON.stringify(array));
-      window.location.href = "../index.html";
-    });
-  }
+  //     // edit product
+  //     let editr_ecipe = document.getElementById("edit_card")
+  //     recipe.addEventListener("click", function (event) {
+  //       event.preventDefault();
+
+        
+  //     })
+
+  //     function editProduct(productID) {
+  //   let array = JSON.parse(localStorage.getItem("newRecipe"));
+  //   let product = array.find(item => item.id === productID);
+  //   document.getElementById("imgurl").value = product.image_url;
+  //   document.getElementById("h2_cardtitle").value = product.h2_cardtitle;
+  //   document.getElementById("message").value = product.message;
+  //   addButton.style.display = "none";
+  //   editButton.style.display = "inline-block";
+  //   editButton.addEventListener("click", function() {
+  //     product.image_url = document.getElementById("imgurl").value;
+  //     product.h2_cardtitle = document.getElementById("h2_cardtitle").value;
+  //     product.message = document.getElementById("message").value;
+  //     localStorage.setItem("newRecipe", JSON.stringify(array));
+  //     window.location.href = "../index.html";
+  //   });
+  // }
 
   
 
