--- a/pages/log.html
+++ b/pages/log.html
@@ -8,14 +8,14 @@
     <form id="form">
       <div class="form-group">
         <label for="email">Email:</label>
-        <input required="" name="email" id="email" type="email">
+        <input required name="email" id="email" type="email">
       </div>
       <div class="form-group">
         <label for="password">Password:</label>
-        <input required="" name="password" id="password" type="password">
+        <input required name="password" id="password" type="password" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
       </div>
       <div class="form-group">
-        <button value="Login" type="submit" id="submit">Submit</button>
+        <button value="Login" type="submit" id="submit" >Submit</button>
       </div>
     </form>
   </div>
