--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
                     </button>
                 </a>
 
-                 <!-- <a href="./pages/log.html">
+                  <a href="./pages/log.html">
                     <button class="login-btn">
                         Login
                     </button> 
 
-                </a> -->
-                 <!-- <a href="./pages/register.html">
+                </a>
+                 <a href="./pages/register.html">
                     <button class="signin">
                         Signin
-                    </button>
-                </a>  -->
+                    </button> 
+                </a> 
                 <a href="./pages/veg.html">
                     <button class="Veg-Recipe">
                         Veg Recipe
@@ -51,7 +51,7 @@
                     <h1> MULLAI'S RECIPE</h1>
                 </div>
         </header>
-        <!-- github -->
+       
     </div>
     
     <!-- <div class="all-recipe">
@@ -218,7 +218,7 @@
                         <li><a href="#steps">Steps</a></li>
                         <li><a href="#tips">Tips</a></li>
                     </ul>
-                </div>
+                </div>s
                 <div class="footer-col">
                     <h3>online</h3>
                     <ul>
