chore: fix issue

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
                     </button>
                 </a>
 
-                  <a href="./pages/log.html">
+                 <!-- <a href="./pages/log.html">
                     <button class="login-btn">
                         Login
                     </button> 
 
-                </a>
-                 <a href="./pages/register.html">
+                </a> -->
+                 <!-- <a href="./pages/register.html">
                     <button class="signin">
                         Signin
-                    </button> 
-                </a> 
+                    </button>
+                </a>  -->
                 <a href="./pages/veg.html">
                     <button class="Veg-Recipe">
                         Veg Recipe
@@ -51,9 +51,15 @@
                     <h1> MULLAI'S RECIPE</h1>
                 </div>
         </header>
-       
+        <!-- github -->
     </div>
-    
+
+    <div>
+
+        <img class="header-image" src="https://media.tenor.com/yZCowKJy4UoAAAAd/anime-anime-gif.gif" alt="head">
+
+        <a href="./pages/page4.html"></a>
+    </div>
     <!-- <div class="all-recipe">
      <div class="recipe">
             <div class="chicken">
@@ -218,7 +224,7 @@
                         <li><a href="#steps">Steps</a></li>
                         <li><a href="#tips">Tips</a></li>
                     </ul>
-                </div>s
+                </div>
                 <div class="footer-col">
                     <h3>online</h3>
                     <ul>
