--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               type="email"
               placeholder=" enter your email"
               autocomplete="email"
-              required 
+              required pattern="[a-z0-9._%+-]+@[a-z0-9.-_]+\.[a-z]{2,}$"
             />
           </div>
           <div class="form-group">
@@ -59,6 +59,9 @@
             />
           </div>
           <button type="submit" class="btn" value="submit">Submit</button>
+          <a href="./pages/log.html">
+          <button type="button" class="btn" value="submit">LogIn</button>
+        </a>
         </form>
       </div>
     </div>
