--- a/pages/home.html
+++ b/pages/home.html
@@ -8,204 +8,109 @@
 </head>
 
 <body>
-    <div class="menu">
-        <header>
 
-            <div>
-                <a href="./pages/profile.html">
-                    <button class="non-veg">
-                        profile
-                    </button>
-                </a>
+    <header class="head">
 
-                <!-- <a href="./pages/log.html">
+        <div>
+            <a href="./profile.html">
+                <button class="non-veg">
+                    profile
+                </button>
+            </a>
+
+            <!-- <a href="./pages/log.html">
                     <button class="login-btn">
                         Login
                     </button> 
 
                 </a> -->
-                <!-- <a href="./pages/register.html">
-                    <button class="signin">
-                        Signin
-                    </button>
-                </a>  -->
-                <a href="./pages/veg.html">
-                    <button class="Veg-Recipe">
-                        Veg Recipe
-                    </button>
-                </a>
-                <a href="./pages/non-veg.html">
-                    <button class="non-veg">
-                        Non-veg
-                    </button>
-                </a>
-                <a href="./pages/snacks.html">
-                    <button class="snacks">
-                        Snacks
-                    </button>
-                </a>
+           
+            <a href="./veg.html">
+                <button class="Veg-Recipe">
+                    Veg Recipe
+                </button>
+            </a>
+            <a href="./non-veg.html">
+                <button class="non-veg">
+                    NonVeg
+                </button>
+            </a>
+            <a href="./snacks.html">
+                <button class="snacks">
+                    Snacks
+                </button>
+            </a>
 
 
-                <div class="header">
-                    <img class="logo" src="../assets/images/yellow logo.png" height="50px" width="50px" alt="logo">
-                    <h1> MULLAI'S RECIPE</h1>
-                </div>
-        </header>
-        
+            <div class="header">
+                <img class="logo" src="../assets/images/yellow logo.png" height="50px" width="50px" alt="logo">
+                <h1>RECIPE</h1>
+            </div>
+            <span class="by">By Mullai</span>
+    </header>
+
+
+
+
+    <!-- <img class="header-image" src="https://media.tenor.com/yZCowKJy4UoAAAAd/anime-anime-gif.gif" alt="head"> -->
+    <div class="all-recipe">
+
     </div>
 
-    <div>
-
-        <img class="header-image" src="https://media.tenor.com/yZCowKJy4UoAAAAd/anime-anime-gif.gif" alt="head">
 
 
-        <!-- </div>
-    <div class="all-recipe">
-        <div class="recipe">
-            <div class="chicken">
-                <a href="./pages/page4.html">
-                    <img class="recipe1" src="./assets/images/chickenfry.jpg" height="300px" width="600px"
-                        alt="chicken">
-                </a>
-            </div>
-            <div class="about">
-                <h2>CHICKEN FRY</h2>
-                <p id="p">Chicken 65 is a spicy, deep-fried chicken dish originating from Hotel Buhari, Chennai, India,
-                    as
-                    an entrée, or quick snack. The flavour of the dish can be to red chillies, but the exact
-                    set of ingredients for the recipe can vary.....
-                </p>
-            </div>
-        </div> -->
-
-        <script>
-
-            //  let recipe = [
+    <script>
 
 
+        const recipe = [];
 
+        let recipelist = JSON.parse(localStorage.getItem("newRecipe"));
+        console.log(recipelist);
 
-            //  {    img_recipe1 : "./assets/images/chickenfry.jpg",
-            //     h2_cardtitle: "CHICKEN",
-            //     p_para: "Chicken 65 is a spicy, deep-fried chicken dish originating from Hotel Buhari, Chennai, India, as an entrée, or quick snack. The flavour of the dish can be to red chillies, but the exact set of ingredients for the recipe can var",
-            // },
+        for (i = 0; i < recipelist.length; i++) {
+            recipe.push(recipelist[i]);
+            console.log(recipe);
+        }
 
-            // {
-            //     img_recipe1: "./assets/images/mutton.jpeg",
-            //     h2_cardtitle: "MUTTON",
-            //     p_para: "Mutton is not very regular in our menu but whenever we get it, its mostly biriyani or Mutton Sukk as its our family favourite. I wanted to share ammas chettinad version of mutton chukka and hereit is for you all..",
-            // },
+        for (let i = 0; i < recipe.length; i++) {
+            let div_recipe = document.createElement("div");
+            div_recipe.classList.add("recipe");
+            let recipe_img = document.createElement("img");
+            recipe_img.classList.add("recipe-img");
+            recipe_img.setAttribute("height", "300px")
+            recipe_img.setAttribute("width", "500px")
 
-            // {
-            //     img_recipe1: "./assets/images/diamond.jpg",
-            //     h2_cardtitle: "DIAMOND FRY",
-            //     p_para: "I would say that this recipe will be a easy but tasty snack which you can make for diwali..I madeit in minutes and it tasted divine....So crispy and so yummy..I hope you will try this out andlet me know how it turned out for you."
+            let recipe_about = document.createElement("div");
+            recipe_about.classList.add("about");
 
-            // },
-            // {
-            //     img_recipe1: "./assets/images/fish.JPG",
-            //     h2_cardtitle: "FISH",
-            //     p_para: "A fish fry is a meal containing battered or breaded fried fish. It usually also includes french fries, coleslaw, macaroni salad, , hot sauce,malt vinegar and dessert. by coating fish with semolina and egg yolk...."
+            let recipe_title = document.createElement("h2");
+            recipe_title.classList.add("recipe-title");
 
-            // },
-            // {
-            //     img_recipe1: "./assets/images/masalapuri.jpg",
-            //     h2_cardtitle: "MASALA PURI",
-            //     p_para: "Masala puri is an awesome street food snack made with layers of crunchy puri, creamy and spicy white peas gravy, rich spices and fresh veggies. Our easywhenever you a craving a fun and flavorful chaat!"
-            // },
+            let recipe_description = document.createElement("p");
+            recipe_description.classList.add("recipe-description");
 
+            let detail_btn = document.createElement("a");
+            detail_btn.classList.add("detailBtn");
 
-            // {
-            //     img_recipe1: "./assets/images/ravadosa.jpg",
-            //     h2_cardtitle: "RAVA DOSA",
-            //     p_para: "Today's recipe, Rawa Dosa, is one such favorite for all, which I have been urging to post for a  while now. Anyone who had eaten at a restaurant serving South Indian cuisine would definitel had order this crispy dosa atleast once."
-            // },
+            recipe_img.src = recipe[i].image_url;
+            recipe_title.textContent = recipe[i].h2_cardtitle;
+            recipe_description.textContent = recipe[i].message;
+            detail_btn.href = "./editrecipe.html?id=" + recipe[i].recipe_id;
+            detail_btn.innerText = "Details"
 
-            // {
-            //     img_recipe1: "./assets/images/ravadosa.jpg",
-            //     h2_cardtitle: "RAVA DOSA",
-            //     p_para: "Today's recipe, Rawa Dosa, is one such favorite for all, which I have been urging to post for a  while now. Anyone who had eaten at a restaurant serving South Indian cuisine would definitel had order this crispy dosa atleast once."
-            // },
+            div_recipe.appendChild(recipe_img);
+            recipe_about.appendChild(recipe_title);
+            recipe_about.appendChild(recipe_description);
+            recipe_about.appendChild(detail_btn);
+            div_recipe.appendChild(recipe_about);
 
-            // ]
+            console.log(div_recipe);
+            document.querySelector(".all-recipe").append(div_recipe);
+        }
 
-            const recipe = [];
+    </script>
 
-            let recipelist = JSON.parse(localStorage.getItem("newRecipe"));
-            console.log(recipelist);
-
-            for (i = 0; i < recipelist.length; i++) {
-                recipe.push(recipelist[i]);
-                console.log(recipe);
-            }
-
-            for (let i = 0; i < recipe.length; i++) {
-
-                let div_all;
-                let div_recipe;
-                let div_chicken;
-                let img_recipe1;
-                let div_about;
-                let h2_cardtitle;
-                let p_para;
-
-                div_all = document.createElement("div");
-                div_all.setAttribute("class", "all-recipe");
-
-                div_recipe = document.createElement("div");
-                div_recipe.setAttribute("class", "recipe");
-                div_all.append(div_recipe);
-
-                div_chicken = document.createElement("div");
-                div_chicken.setAttribute("class", "chicken");
-                div_all.append(div_chicken);
-
-                a = document.createElement("a")
-                a.setAttribute("href", "./pages/page4.html")
-                a.setAttribute("href", "./pages/page4.html?id" + recipe[i]["recipe_id"])
-                div_chicken.append(a)
-
-                img_recipe1 = document.createElement("img");
-                img_recipe1.setAttribute("class", "recipe1");
-                img_recipe1.setAttribute("src", recipe[i]["image_url"]);
-
-                // img_recipe1.setAttribute("src",  "./assets/images/mutton.jpeg");
-                img_recipe1.setAttribute("height", "300px");
-                img_recipe1.setAttribute("weight", "500px");
-
-                a.append(img_recipe1);
-                div_about = document.createElement("div");
-                div_about.setAttribute("class", "about");
-                div_recipe.append(div_about);
-
-
-                h2_cardtitle = document.createElement("h2");
-                h2_cardtitle.innerText = recipe[i]["h2_cardtitle"]
-                div_about.append(h2_cardtitle);
-                console.log(h2_cardtitle);
-
-                p_para = document.createElement("p");
-                p_para.innerText = recipe[i]["message"]
-                div_about.append(p_para);
-
-                edit = document.createElement("a");
-                edit.setAttribute("class", "edit")
-                edit.setAttribute("href", "./pages/editrecipe.html?id" + recipe[i]["recipe_id"])
-                edit.innerText = "Edit"
-                div_about.append(edit);
-
-
-                deleteBtn = document.createElement("a");
-                deleteBtn.setAttribute("class", "deleteBtn")
-                deleteBtn.innerText = "delete"
-                div_about.append(deleteBtn);
-
-                document.querySelector("body").append(div_all);
-            }
-
-        </script>
-
-        <!-- <footer class="footer">
+    <!-- <footer class="footer">
             <div class="container">
                 <div class="row">
                     <div class="footer-col">
